--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-30T08:46:34.416347Z",
-     "start_time": "2020-10-30T08:46:34.022045Z"
+     "end_time": "2020-10-30T15:29:54.870964Z",
+     "start_time": "2020-10-30T15:29:54.270293Z"
     }
    },
    "outputs": [],
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-30T08:46:40.690848Z",
-     "start_time": "2020-10-30T08:46:34.419673Z"
+     "end_time": "2020-10-30T15:29:59.787761Z",
+     "start_time": "2020-10-30T15:29:54.870964Z"
     }
    },
    "outputs": [],
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-30T08:46:47.643208Z",
-     "start_time": "2020-10-30T08:46:40.693842Z"
+     "end_time": "2020-10-30T15:30:05.201998Z",
+     "start_time": "2020-10-30T15:29:59.787761Z"
     }
    },
    "outputs": [],
@@ -129,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-30T08:46:56.658115Z",
-     "start_time": "2020-10-30T08:46:47.643208Z"
+     "end_time": "2020-10-30T15:30:13.065211Z",
+     "start_time": "2020-10-30T15:30:05.202110Z"
     }
    },
    "outputs": [],
@@ -147,139 +147,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "# Visualizations"
-   ]
+    "### Other tables"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-27T16:04:26.262505Z",
-     "start_time": "2020-10-27T16:04:26.235608Z"
-    }
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "import plotly.express as px\n",
-    "import plotly.io as pio\n",
-    "from IPython.display import Image, HTML\n",
+    "# from IPython.display import Image, HTML\n",
     "\n",
-    "pio.templates.default = \"plotly_white\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Resources\n",
-    "\n",
-    "- https://plotly.com/python/templates/\n",
-    "- https://plotly.com/python/bar-charts/\n",
-    "- https://plotly.com/python/discrete-color/\n",
-    "- https://plotly.com/python/horizontal-bar-charts/\n",
-    "- https://awesome-streamlit.org/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. 10 most used stickers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-27T16:04:33.169882Z",
-     "start_time": "2020-10-27T16:04:33.087528Z"
-    },
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
     "stickers_df = text_df[text_df['media_type']=='sticker'].groupby(['sticker_url','from']).agg({'from_id':'count'}).reset_index()\n",
-    "stickers_df = stickers_df.pivot(index='sticker_url',columns='from',values='from_id').reset_index()\n",
-    "stickers_df['total'] = stickers_df['🐑💛🌙'] + stickers_df['🐥💛🌻']\n",
-    "stickers_df = stickers_df.sort_values(['total'], ascending=False).head(10)\n",
-    "stickers_df['🐑💛🌙'] = stickers_df['🐑💛🌙'].astype(int)\n",
-    "stickers_df['🐥💛🌻'] = stickers_df['🐥💛🌻'].astype(int)\n",
-    "stickers_df['total'] = stickers_df['total'].astype(int)\n",
+    "# stickers_df = stickers_df.sort_values('from_id',ascending=False).groupby('from')\n",
     "\n",
-    "stickers_df['sticker_html'] = '<img src=\"'+ stickers_df['sticker_url'] + '\" width=\"30\" height=\"30\"/>'\n",
+    "# stickers_df = stickers_df.pivot(index='sticker_url',columns='from',values='from_id').reset_index()\n",
+    "# stickers_df['total'] = stickers_df['🐑💛🌙'] + stickers_df['🐥💛🌻']\n",
+    "# stickers_df = stickers_df.sort_values(['total'], ascending=False).head(10)\n",
+    "# stickers_df['🐑💛🌙'] = stickers_df['🐑💛🌙'].astype(int)\n",
+    "# stickers_df['🐥💛🌻'] = stickers_df['🐥💛🌻'].astype(int)\n",
+    "# stickers_df['total'] = stickers_df['total'].astype(int)\n",
     "\n",
-    "pd.set_option('display.max_colwidth', None)\n",
-    "\n",
-    "HTML(stickers_df[['sticker_html','🐑💛🌙','🐥💛🌻','total']].to_html(escape=False))\n",
+    "stickers_df.to_csv('stickers_df.csv',index=False)\n",
+    "# stickers_df['sticker_html'] = '<img src=\"'+ stickers_df['sticker_url'] + '\" width=\"30\" height=\"30\"/>'\n",
+    "# HTML(stickers_df[['sticker_html','🐑💛🌙','🐥💛🌻','total']].to_html(escape=False))\n",
     "# st.write(stickers_df[['sticker_html','🐑💛🌙','🐥💛🌻','total']].to_html(escape=False), unsafe_allow_html=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Oveview"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-27T15:48:11.013379Z",
-     "start_time": "2020-10-27T15:48:10.953035Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "overview_df = text_df.groupby('from').agg({'text2':'count','word_count':'mean','hour':'median'}).reset_index()\n",
-    "overview_df.rename(columns={'text2':'Message_count',\n",
-    "                            'word_count':'Average_message_length',\n",
-    "                            'hour':'Median_hour'},\n",
-    "                   inplace=True)\n",
-    "overview_df.style.format({'Message_count': '{:.0f}', 'Average_message_length': '{:.2f}', 'hour': '{:.0f}'})\n",
-    "# overview_df.style.set_precision(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-27T16:18:41.977485Z",
-     "start_time": "2020-10-27T16:18:41.972498Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(px.colors.qualitative.Pastel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-27T16:22:44.646520Z",
-     "start_time": "2020-10-27T16:22:44.596646Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fig = px.bar(overview_df, x='Message_count', y='from',\n",
-    "             color='from', orientation='h',\n",
-    "             color_discrete_map={\n",
-    "                \"🐑💛🌙\": 'rgb(246, 207, 113)',\n",
-    "                \"🐥💛🌻\": \"rgb(102, 197, 204)\"},\n",
-    "             text='Message_count',\n",
-    "             color_discrete_sequence=px.colors.qualitative.Pastel)\n",
-    "fig.show()"
    ]
   }
  ],
@@ -299,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5-final"
   },
   "varInspector": {
    "cols": {
