add dataset and test st app

--- a/data/2_time.ipynb
+++ b/data/2_time.ipynb
@@ -13,8 +13,15 @@
    "source": [
     "%reset -f\n",
     "import altair as alt\n",
-    "\n",
-    "# Altair testing\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "text_url = 'text_df.csv'"
    ]
   },
@@ -50,9 +57,9 @@
     "# message overtime\n",
     "alt.Chart(text_url).mark_line().encode(\n",
     "    x='date:T',\n",
-    "    y='count(text2):Q',\n",
+    "    y='count():Q',\n",
     "    color='from:N',\n",
-    "    tooltip=['from:N', 'date:T','count(text2):Q']\n",
+    "    tooltip=['from:N', 'date:T','count():Q']\n",
     ").properties(\n",
     "    width=550,\n",
     "    height=200\n",
